Fixed the slider gap and responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -421,7 +421,7 @@ li {
   background-size: cover;
   width: 100%;
   height: 50vh;
-  margin-top: 25vh;
+  margin-top: 15vh;
 }
 
 /* fixing the image height  */
@@ -431,17 +431,17 @@ li {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 15vh;
+    height: 12vh;
   }
 }
 
-@media only screen and (min-width: 601px) and (max-width: 1000px) {
+@media only screen and (min-width: 601px) and (max-width: 1100px) {
   .project-gridimage {
     background-image: url(../images2/under_slider_wave.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 25vh;
+    height: 20vh;
   }
 }
 /* fixing the margin-bottom gap */
@@ -605,7 +605,6 @@ li {
 }
 
 .test {
-  
   width: 100%;
   height: 60vh;
   display: flex;
@@ -614,7 +613,6 @@ li {
 
 /* si ajout projet modifier valeur slider width de 4 à correspondante */
 .slider {
-  /* position: relative; */
   width: calc(4 * 100vw);
   height: 80vh;
 }
@@ -645,9 +643,54 @@ li {
   background-position: center;
 }
 
-.slider-margintop{
+.slider-margintop {
   margin-top: 20vh;
   margin-bottom: 15vh;
 }
 
+@media only screen and (min-width: 290px) and (max-width: 400px) {
+  .slider-margintop {
+    margin-top: 2.5vh;
+    margin-bottom: 1.5vh;
+  }
+}
+@media only screen and (min-width: 401px) and (max-width: 700px) {
+  .slider-margintop {
+    margin-top: 3.5vh;
+    margin-bottom: 2.25vh;
+  }
+}
 
+@media only screen and (min-width: 701px) and (max-width: 1000px) {
+  .slider-margintop {
+    margin-top: 5vh;
+    margin-bottom: 3vh;
+  }
+}
+
+@media only screen and (min-width: 1001px) and (max-width: 1500px) {
+  .slider-margintop {
+    margin-top: 6.5vh;
+    margin-bottom: 3.75vh;
+  }
+}
+
+@media only screen and (min-width: 1501px) {
+  .slider-margintop {
+    margin-top: 7.5vh;
+    margin-bottom: 4vh;
+  }
+}
+
+/* media queries for resizing the slider */
+ @media only screen and (min-width: 300px) and (max-width: 600px) {
+  .slider {
+    height: 45vh;
+  }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 1000px) {
+  .slider{
+    height: 70vh;
+  }
+}
